--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Inès Schedule",
-  "short_name": "Inès Schedule",
+  "name": "Jade Schedule",
+  "short_name": "Jade Schedule",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
