--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.446.0",
     "luxon": "^3.7.1",
     "next": "13.5.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -80,6 +81,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.7.1",
+    "@types/minimatch": "^6.0.0",
     "@types/uuid": "^10.0.0"
   }
 }
