--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,11 @@
 {
   "name": "Jade Schedule",
-  "short_name": "Jade Schedule",
+  "short_name": "Jade",
+  "start_url": "/?source=pwa",
+  "scope": "/",
+  "display": "standalone",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
@@ -14,8 +19,5 @@
       "type": "image/png",
       "purpose": "maskable"
     }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "standalone"
+  ]
 }
